--- a/lilMessClient/MainWindow.xaml
+++ b/lilMessClient/MainWindow.xaml
@@ -1,8 +1,16 @@
 ﻿<Window x:Class="lilMessClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="lilMess" Height="350" Width="525" Closing="Window_Closing">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="42*"/>
+            <RowDefinition Height="277*"/>
+            <RowDefinition Height="277*"/>
+        </Grid.RowDefinitions>
         
+        <Button Name="Connect" Content="Connect" Click="Connect_Click"/>
+        <RichTextBox Name="ChatBox" Grid.Row="1"/>
+        <TextBox Name="Message" Grid.Row="2" KeyDown="Message_KeyDown"/>
     </Grid>
 </Window>
