--- a/lilMess.Server/App.xaml
+++ b/lilMess.Server/App.xaml
@@ -4,7 +4,7 @@
              xmlns:vm="clr-namespace:lilMess.Server.ViewModels"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" StartupUri="Views/MainWindow.xaml"
+             mc:Ignorable="d" StartupUri="Views/MainView.xaml"
              ShutdownMode="OnMainWindowClose">
     <Application.Resources>
         <ResourceDictionary>
