--- a/lilMess.Client/Views/MainWindow.xaml
+++ b/lilMess.Client/Views/MainWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:model="clr-namespace:lilMess.Client.Models"
     Title="lilMess" Height="350" Width="525"
     DataContext="{Binding Main, Source={StaticResource Locator}}">
     <controls:MetroWindow.RightWindowCommands>
@@ -23,14 +24,16 @@
             <RowDefinition Height="0.5*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <!--<TreeView Grid.Column="0" Grid.RowSpan="3" ItemsSource="{Binding RoomsList}">
+        <TreeView Grid.Column="0" Grid.RowSpan="3" ItemsSource="{Binding RoomsList}">
             <TreeView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type model:RoomModel}" ItemsSource="{Binding Rooms}">
+                <BooleanToVisibilityConverter x:Key="BoolToVis" />
+                <HierarchicalDataTemplate DataType="{x:Type model:RoomModel}" ItemsSource="{Binding Users}">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="{Binding Name}" />
                         <TextBlock Text=" [" Foreground="Blue" />
                         <TextBlock Text="{Binding Users.Count}" Foreground="Blue" />
                         <TextBlock Text="]" Foreground="Blue" />
+                        <TextBlock Text=" H" Visibility="{Binding Home, Converter={StaticResource BoolToVis}}" />
                     </StackPanel>
                 </HierarchicalDataTemplate>
                 <DataTemplate DataType="{x:Type model:UserModel}">
@@ -39,7 +42,7 @@
                     </StackPanel>
                 </DataTemplate>
             </TreeView.Resources>
-        </TreeView>-->
+        </TreeView>
         <FlowDocumentScrollViewer Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="0" Grid.RowSpan="2" Margin="10,0,0,0">
             <FlowDocument>
                 <Paragraph>
