--- a/lilMess.Server/Views/StatisticsView.xaml
+++ b/lilMess.Server/Views/StatisticsView.xaml
@@ -1,14 +1,36 @@
 ﻿<Window x:Class="lilMess.Server.Views.StatisticsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="StatisticsView" Height="364" Width="522"
+        xmlns:d3="http://research.microsoft.com/DynamicDataDisplay/1.0"
+        Title="StatisticsView" Height="400" Width="400"
         DataContext="{Binding Statistics, Source={StaticResource Locator}}">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="149*"/>
-            <RowDefinition Height="184*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="{Binding StatisticsModel.IncomingTraffic}" Grid.Row="0"/>
-        <TextBlock Text="{Binding StatisticsModel.OutcomingTraffic}" Grid.Row="1"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="30*"/>
+            <ColumnDefinition Width="70*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel>
+            <TextBlock>Server is running</TextBlock>            
+        </StackPanel>
+        <DataGrid Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" ItemsSource="{Binding Collection}" 
+                  IsReadOnly="True" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Time}" Header="Время" Width="*"/>
+                <DataGridTextColumn Binding="{Binding IncomingTraffic}" Header="Входящий траффик" Width="*"/>
+                <DataGridTextColumn Binding="{Binding OutcomingTraffic}" Header="Исходящий траффик" Width="*"/>
+                <DataGridTextColumn Binding="{Binding CpuLoad}" Header="Загрузка CPU" Width="*"/>
+                <DataGridTextColumn Binding="{Binding MemLoad}" Header="Загрузка RAM" Width="*"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <d3:ChartPlotter Grid.Row="0" Grid.Column="1">
+            <d3:Header FontFamily="Georgia" Content="Статистика сервера"/>
+            <d3:HorizontalAxisTitle FontFamily="Georgia" Content="Время"/>
+            <d3:VerticalAxisTitle FontFamily="Georgia" Content="Входящий траффик" />
+            <d3:LineGraph DataSource="{Binding ChartDataSource}" />
+        </d3:ChartPlotter>
     </Grid>
 </Window>
