--- a/lilMess.Client/Views/MainWindow.xaml
+++ b/lilMess.Client/Views/MainWindow.xaml
@@ -3,17 +3,22 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-    xmlns:model="clr-namespace:lilMess.Client.Models"
-    Title="lilMess" Height="350" Width="525"
+    xmlns:views="clr-namespace:lilMess.Client.Views"
+    Title="lilMess" Height="400" Width="800" FontFamily="SegoeUI"
     DataContext="{Binding Main, Source={StaticResource Locator}}">
     <controls:MetroWindow.RightWindowCommands>
         <controls:WindowCommands>
-            <Button ToolTip="Подключиться к серверу" Content="Подключиться" Command="{Binding OpenLoginWindowCommand}"/>
+            <Menu Background="Transparent">
+                <MenuItem Header="_File">
+                    <MenuItem Header="E_xit" Command="{Binding Path=CloseCommand}" />
+                </MenuItem>
+                <MenuItem Header="_Connect" Command="{Binding OpenLoginWindowCommand}" ToolTip="test tooltip"/>
+            </Menu>
         </controls:WindowCommands>
     </controls:MetroWindow.RightWindowCommands>
-    <Grid Margin="7">
+    <Grid Margin="7" DockPanel.Dock="Bottom">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition MinWidth="120" />
+            <ColumnDefinition MinWidth="60"/>
             <ColumnDefinition />
             <ColumnDefinition />
             <ColumnDefinition Width="Auto" />
@@ -24,25 +29,7 @@
             <RowDefinition Height="0.5*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <TreeView Grid.Column="0" Grid.RowSpan="3" ItemsSource="{Binding RoomsList}">
-            <TreeView.Resources>
-                <BooleanToVisibilityConverter x:Key="BoolToVis" />
-                <HierarchicalDataTemplate DataType="{x:Type model:RoomModel}" ItemsSource="{Binding Users}">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Name}" />
-                        <TextBlock Text=" [" Foreground="Blue" />
-                        <TextBlock Text="{Binding Users.Count}" Foreground="Blue" />
-                        <TextBlock Text="]" Foreground="Blue" />
-                        <TextBlock Text=" H" Visibility="{Binding Home, Converter={StaticResource BoolToVis}}" />
-                    </StackPanel>
-                </HierarchicalDataTemplate>
-                <DataTemplate DataType="{x:Type model:UserModel}">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Name}" />
-                    </StackPanel>
-                </DataTemplate>
-            </TreeView.Resources>
-        </TreeView>
+        <views:RoomListView Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" />
         <FlowDocumentScrollViewer Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="0" Grid.RowSpan="2" Margin="10,0,0,0">
             <FlowDocument>
                 <Paragraph>
@@ -51,7 +38,7 @@
             </FlowDocument>
         </FlowDocumentScrollViewer>
         <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Auto" 
-                 TextWrapping="Wrap" Margin="10" AcceptsReturn="True"> 
+                 TextWrapping="Wrap" Margin="10" AcceptsReturn="True">
             <TextBox.Text>
                 <Binding Path="ChatMessage" UpdateSourceTrigger="PropertyChanged"/>
             </TextBox.Text>
