Big amount of changes

--- a/lilMess.Server/Views/MainView.xaml
+++ b/lilMess.Server/Views/MainView.xaml
@@ -19,6 +19,6 @@
             </FlowDocument>
         </RichTextBox>
         <Button Content="Shutdown" Grid.Row="2" HorizontalAlignment="Right" Margin="0,10,10,10" Command="{Binding ShutdownCommand}" />
-        <Button Content="Logging" Grid.Row="2" HorizontalAlignment="Left" Margin="10,10,10,10" Command="{Binding EnableLogging}" />
+        <Button Content="Logging" Grid.Row="2" HorizontalAlignment="Left" Margin="10,10,10,10" Command="{Binding GatherStatisticsCommand}" />
     </Grid>
 </Window>
