--- a/lilMess.Client/Views/MainWindow.xaml
+++ b/lilMess.Client/Views/MainWindow.xaml
@@ -1,55 +1,95 @@
 ﻿<controls:MetroWindow
-    x:Class="lilMess.Client.Views.MainWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-    xmlns:views="clr-namespace:lilMess.Client.Views"
-    Title="lilMess" Height="400" Width="800" FontFamily="SegoeUI"
-    DataContext="{Binding Main, Source={StaticResource Locator}}">
-    <controls:MetroWindow.RightWindowCommands>
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+	xmlns:views="clr-namespace:lilMess.Client.Views"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
+	x:Class="lilMess.Client.Views.MainWindow"
+	Title="lilMess" Height="400" Width="800" FontFamily="SegoeUI"
+	
+	ResizeMode="CanResizeWithGrip"
+	GlowBrush="{DynamicResource AccentColorBrush}"
+	WindowStartupLocation="CenterScreen"
+    
+	DataContext="{Binding Main, Source={StaticResource Locator}}">
+
+    <controls:MetroWindow.LeftWindowCommands>
         <controls:WindowCommands>
-            <Menu Background="Transparent">
-                <MenuItem Header="_File">
-                    <MenuItem Header="E_xit" Command="{Binding Path=CloseCommand}" />
-                </MenuItem>
-                <MenuItem Header="_Connect" Command="{Binding OpenLoginWindowCommand}" ToolTip="test tooltip"/>
-            </Menu>
+            <Button Command="{Binding OpenGitRepositoryCommand}" ToolTip="lilMess on GitHub">
+                <Rectangle Width="22" Height="22" Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+                    <Rectangle.OpacityMask>
+                        <VisualBrush Stretch="Uniform"
+                                     Visual="{StaticResource appbar_github}" />
+                    </Rectangle.OpacityMask>
+                </Rectangle>
+            </Button>
         </controls:WindowCommands>
-    </controls:MetroWindow.RightWindowCommands>
-    <Grid Margin="7" DockPanel.Dock="Bottom">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition MinWidth="60"/>
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition Height="0.5*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <views:RoomListView Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" />
-        <FlowDocumentScrollViewer Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="0" Grid.RowSpan="2" Margin="10,0,0,0">
-            <FlowDocument>
-                <Paragraph>
-                    <Run Text="{Binding Document}" />
-                </Paragraph>
-            </FlowDocument>
-        </FlowDocumentScrollViewer>
-        <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Auto" 
-                 TextWrapping="Wrap" Margin="10" AcceptsReturn="True">
-            <TextBox.Text>
-                <Binding Path="ChatMessage" UpdateSourceTrigger="PropertyChanged"/>
-            </TextBox.Text>
+    </controls:MetroWindow.LeftWindowCommands>
+
+    <controls:MetroWindow.RightWindowCommands>
+		<controls:WindowCommands>
+			<Button Content="Connect" Command="{Binding OpenLoginWindowCommand}"/>
+		</controls:WindowCommands>
+	</controls:MetroWindow.RightWindowCommands>
+	
+	<Grid DockPanel.Dock="Bottom" Background="{DynamicResource AccentColorBrush4}">
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition MinWidth="60"/>
+			<ColumnDefinition />
+			<ColumnDefinition />
+			<ColumnDefinition Width="Auto" />
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition />
+			<RowDefinition />
+			<RowDefinition Height="0.5*" />
+			<RowDefinition Height="Auto" />
+		</Grid.RowDefinitions>
+		<views:RoomListView Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Background="Transparent"/>
+		
+		<ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="0" Grid.RowSpan="2" Margin="10">
+            <ItemsControl Padding="5" ItemsSource="{Binding Messages}" Background="{DynamicResource AccentColorBrush3}" BorderThickness="2" BorderBrush="{DynamicResource AccentColorBrush}">
+				<ItemsControl.ItemTemplate>
+					<DataTemplate>
+						<Grid>
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="auto" />
+								<ColumnDefinition Width="*" />
+							</Grid.ColumnDefinitions>
+							<Border Style="{StaticResource ChatMessageBorderStyle}" Grid.Column="0" >
+								<TextBlock Style="{StaticResource TextBlockSender}" Text="{Binding MessageTime, StringFormat=\{0:HH:mm:ss\}}" VerticalAlignment="Top"/>
+							</Border>
+                            <Border x:Name="contentBorder" Grid.Column="1" Style="{StaticResource ChatMessageBorderStyle}">
+								<StackPanel>
+									<TextBlock Style="{StaticResource TextBlockDefault}" Text="{Binding MessageContent}" TextWrapping="Wrap" />
+									<TextBlock Style="{StaticResource TextBlockDefault}" Text="{Binding MessageSender.UserName}" Foreground="{Binding MessageSender.UserRole.RoleColor}" HorizontalAlignment="Right" />
+								</StackPanel>
+							</Border>
+						</Grid>
+					</DataTemplate>
+				</ItemsControl.ItemTemplate>
+			</ItemsControl>
+		</ScrollViewer>
+
+        <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" TextWrapping="Wrap" Margin="10,10,5,10" Background="{DynamicResource AccentColorBrush3}"
+                 AcceptsReturn="True" Text="{Binding ChatMessage, UpdateSourceTrigger=PropertyChanged}">
             <TextBox.InputBindings>
                 <KeyBinding Gesture="Shift+Enter" Command="{Binding SendChatMessageCommand}"/>
             </TextBox.InputBindings>
         </TextBox>
-        <Button Content=">" Grid.Column="3" Grid.Row="2" Height="23" Command="{Binding SendChatMessageCommand}"/>
-        <ToolBarPanel Grid.Row="3" Grid.ColumnSpan="3" Grid.Column="0">
-            <Label Content="{Binding ServerInfo}" />
-        </ToolBarPanel>
         <GridSplitter Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Background="Gray" ShowsPreview="true" Width="3" HorizontalAlignment="Left" />
-    </Grid>
+
+        <Button Grid.Column="3" Grid.Row="2" Width="45" Height="45" Margin="5,0,10,0" Background="{DynamicResource AccentColorBrush3}"
+                Style="{DynamicResource MetroCircleButtonStyle}" Command="{Binding SendChatMessageCommand}">
+            <Rectangle Width="20" Height="20" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}">
+                <Rectangle.OpacityMask>
+                    <VisualBrush Stretch="Fill" Visual="{DynamicResource appbar_navigate_next}" />
+                </Rectangle.OpacityMask>
+            </Rectangle>
+        </Button>
+        
+		<StatusBar Grid.Row="3" Grid.ColumnSpan="4" Grid.Column="0">
+			<StatusBarItem Content="{Binding ServerInfo}" />
+		</StatusBar>
+	</Grid>
 </controls:MetroWindow>
