--- a/lilMess.Client/Views/LoginWindow.xaml
+++ b/lilMess.Client/Views/LoginWindow.xaml
@@ -1,16 +1,12 @@
 ﻿<controls:MetroWindow x:Name="Window"
     x:Class="lilMess.Client.Views.LoginWindow"
-                      
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-                      
     Title="lilMess" Height="300" Width="300" FontFamily="SegoeUI"
-
     ResizeMode="CanResizeWithGrip"
     GlowBrush="{DynamicResource AccentColorBrush}"
     WindowStartupLocation="CenterScreen"
-
     DataContext="{Binding Login, Source={StaticResource Locator}}">
     
     <Grid Margin="20">
@@ -31,12 +27,12 @@
 
         <TextBlock Text="lilMess" TextAlignment="Center" FontSize="32" Grid.Row="0" Grid.ColumnSpan="2" />
 
-        <TextBlock Text="Сервер" TextAlignment="Center" FontSize="16" Grid.Row="2" Grid.Column="0" Margin="7,3,7,3" VerticalAlignment="Center" />
+        <TextBlock Text="{DynamicResource Server}" TextAlignment="Center" FontSize="16" Grid.Row="2" Grid.Column="0" Margin="7,3,7,3" VerticalAlignment="Center" />
         <TextBox Text="{Binding ServerInfo}" Grid.Row="2" Grid.Column="1" Margin="7,3,7,3" controls:TextBoxHelper.Watermark="127.0.0.1:9997" controls:TextBoxHelper.ClearTextButton="True"/>
 
-        <TextBlock Text="Логин" TextAlignment="Center" FontSize="16" Grid.Row="3" Grid.Column="0" Margin="7,3,7,3" VerticalAlignment="Center" />
+        <TextBlock Text="{DynamicResource Login}" TextAlignment="Center" FontSize="16" Grid.Row="3" Grid.Column="0" Margin="7,3,7,3" VerticalAlignment="Center" />
         <TextBox Text="{Binding UserName}" Grid.Row="3" Grid.Column="1" Margin="7,3,7,3" controls:TextBoxHelper.Watermark="username" controls:TextBoxHelper.ClearTextButton="True"/>
 
-        <Button Content="Залогиниться" Grid.Row="6" Grid.ColumnSpan="2" Grid.Column="0" Margin="10" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=Window}" />
+        <Button Content="{DynamicResource LoginAction}" Grid.Row="6" Grid.ColumnSpan="2" Grid.Column="0" Margin="10" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=Window}" />
     </Grid>
 </controls:MetroWindow>
