--- a/lilMess.Client/Views/RoomListView.xaml
+++ b/lilMess.Client/Views/RoomListView.xaml
@@ -1,15 +1,15 @@
 ﻿<UserControl x:Class="lilMess.Client.Views.RoomListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:model="clr-namespace:lilMess.Client.Models"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
+             
+             d:DesignWidth="300" d:DesignHeight="300" 
+             
+             d:DataContext="{Binding RoomListDesignTime, Source={StaticResource Locator}}"
              DataContext="{Binding RoomList, Source={StaticResource Locator}}">
     <Grid>
-        <TreeView Grid.Column="0" Grid.RowSpan="3" ItemsSource="{Binding RoomsList}" >
-            
+        <TreeView Grid.Column="0" Grid.RowSpan="3" ItemsSource="{Binding RoomsList}">
             <TreeView.Resources>
                 <BooleanToVisibilityConverter x:Key="BoolToVis" />
                 <HierarchicalDataTemplate DataType="{x:Type model:RoomModel}" ItemsSource="{Binding RoomUsers}">
