--- a/lilMess.Client/Views/MainWindow.xaml
+++ b/lilMess.Client/Views/MainWindow.xaml
@@ -45,7 +45,7 @@
 			<RowDefinition Height="0.5*" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
-		<views:RoomListView Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Background="Transparent"/>
+		<views:RoomListView Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" />
 		
 		<ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="0" Grid.RowSpan="2" Margin="10">
 			<ItemsControl Padding="5" ItemsSource="{Binding Messages}" Background="{DynamicResource AccentColorBrush3}" BorderThickness="2" BorderBrush="{DynamicResource AccentColorBrush}">
