--- a/lilMess.Client/Views/RoomListView.xaml
+++ b/lilMess.Client/Views/RoomListView.xaml
@@ -2,17 +2,25 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:model="clr-namespace:lilMess.Client.Models"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:dragDrop="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
+             mc:Ignorable="d"
              
              d:DesignWidth="300" d:DesignHeight="300" 
              
              d:DataContext="{Binding RoomListDesignTime, Source={StaticResource Locator}}"
              DataContext="{Binding RoomList, Source={StaticResource Locator}}">
     <Grid>
-        <TreeView Grid.Column="0" Grid.RowSpan="3" ItemsSource="{Binding RoomsList}">
+        <TreeView Grid.Column="0" 
+                  Grid.RowSpan="3" 
+                  ItemsSource="{Binding RoomsList}"
+                  dragDrop:DragDrop.IsDragSource="True"
+                  dragDrop:DragDrop.IsDropTarget="True"
+                  dragDrop:DragDrop.DragHandler="{Binding}"
+                  dragDrop:DragDrop.DropHandler="{Binding}">
             <TreeView.Resources>
                 <BooleanToVisibilityConverter x:Key="BoolToVis" />
-                <HierarchicalDataTemplate DataType="{x:Type model:RoomModel}" ItemsSource="{Binding RoomUsers}">
+                <HierarchicalDataTemplate DataType="{x:Type model:RoomModel}" ItemsSource="{Binding Children}">
                     <StackPanel Orientation="Horizontal">
                         <StackPanel.ContextMenu>
                             <ContextMenu>
