--- a/lilMess.Client/App.xaml
+++ b/lilMess.Client/App.xaml
@@ -5,10 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" StartupUri="Views/MainWindow.xaml"
-             
+             Startup="Application_Startup"
+             Exit="Application_Exit"
              LoadCompleted="ApplicationLoadCompleted"
-             
-             
              ShutdownMode="OnMainWindowClose">
     <Application.Resources>
         <ResourceDictionary>
