--- a/lilMess.Client/Styles/Others.xaml
+++ b/lilMess.Client/Styles/Others.xaml
@@ -6,7 +6,7 @@
         <Setter Property="CornerRadius" Value="6" />
         <Setter Property="Padding" Value="6" />
         <Setter Property="Margin" Value="5" />
-        <Setter Property="Background" Value="{StaticResource AccentColorBrush2}" />
+        <Setter Property="Background" Value="{DynamicResource AccentColorBrush2}" />
     </Style>
 
     <Style x:Key="TextBlockDefault" TargetType="{x:Type TextBlock}">
