--- a/lilMess.Client/Views/LoginView.xaml
+++ b/lilMess.Client/Views/LoginView.xaml
@@ -1,10 +1,10 @@
 ﻿<controls:MetroWindow x:Name="Window"
-    x:Class="lilMess.Client.Views.LoginWindow"
+    x:Class="lilMess.Client.Views.LoginView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-    Title="lilMess" Height="300" Width="300" FontFamily="SegoeUI"
-    ResizeMode="CanResizeWithGrip"
+    Title="{DynamicResource LoginWindowTitle}" Height="300" Width="300" FontFamily="SegoeUI"
+    ResizeMode="NoResize"
     GlowBrush="{DynamicResource AccentColorBrush}"
     WindowStartupLocation="CenterScreen"
     DataContext="{Binding Login, Source={StaticResource Locator}}">
@@ -12,9 +12,7 @@
         <Style TargetType="{x:Type TextBox}">
             <Style.Triggers>
                 <Trigger Property="Validation.HasError" Value="true">
-                    <Setter Property="ToolTip" 
-                            Value="{Binding RelativeSource={x:Static RelativeSource.Self},
-                        Path=(Validation.Errors)[0].ErrorContent}"/>
+                    <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
@@ -37,16 +35,14 @@
 
         <TextBlock Text="lilMess" TextAlignment="Center" FontSize="32" Grid.Row="0" Grid.ColumnSpan="2" />
 
-        <TextBlock Text="{DynamicResource Server}" TextAlignment="Center" FontSize="16" Grid.Row="2" Grid.Column="0" Margin="7,3,7,3" VerticalAlignment="Center" />
+        <TextBlock Text="{DynamicResource Server}" TextAlignment="Center" Foreground="{DynamicResource TextBrush}" FontSize="16" Grid.Row="2" Grid.Column="0" Margin="7,3,7,3" VerticalAlignment="Center" />
         <TextBox Grid.Row="2" Grid.Column="1" Margin="7,3,7,3" Text="{Binding LoginModel.ServerInfo, ValidatesOnNotifyDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                  controls:TextBoxHelper.Watermark="127.0.0.1:9997" controls:TextBoxHelper.ClearTextButton="True"/>
 
-        <TextBlock Text="{DynamicResource Login}" TextAlignment="Center" FontSize="16" Grid.Row="3" Grid.Column="0" Margin="7,3,7,3" VerticalAlignment="Center" />
+        <TextBlock Text="{DynamicResource Login}" TextAlignment="Center" Foreground="{DynamicResource TextBrush}" FontSize="16" Grid.Row="3" Grid.Column="0" Margin="7,3,7,3" VerticalAlignment="Center" />
         <TextBox Grid.Row="3" Grid.Column="1" Margin="7,3,7,3"  Text="{Binding LoginModel.UserName, ValidatesOnNotifyDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                  controls:TextBoxHelper.Watermark="username" controls:TextBoxHelper.ClearTextButton="True"/>
 
-        <Button Content="{DynamicResource LoginAction}" 
-                Grid.Row="6" Grid.ColumnSpan="2" Grid.Column="0" Margin="10" Command="{Binding LoginCommand}" 
-                CommandParameter="{Binding ElementName=Window}" />
+        <Button Content="{DynamicResource LoginAction}" Grid.Row="6" Grid.ColumnSpan="2" Grid.Column="0" Margin="10" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=Window}" />
     </Grid>
 </controls:MetroWindow>
