--- a/lilMess.Client/Views/MainView.xaml
+++ b/lilMess.Client/Views/MainView.xaml
@@ -79,11 +79,11 @@
 		</TextBox>
 		<GridSplitter Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Background="Gray" ShowsPreview="true" Width="3" HorizontalAlignment="Left" />
 
-		<Button Grid.Column="3" Grid.Row="2" Width="30" Height="30" Margin="5,0,10,0" Background="{DynamicResource AccentColorBrush3}"
+		<Button Grid.Column="3" Grid.Row="2" Width="37" Height="37" Margin="5,0,10,0" Background="{DynamicResource AccentColorBrush3}"
 				Style="{DynamicResource MetroCircleButtonStyle}" Command="{Binding SendChatMessageCommand}">
-			<Rectangle Width="15" Height="15" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}">
+			<Rectangle Width="21" Height="15" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}">
 				<Rectangle.OpacityMask>
-					<VisualBrush Stretch="Fill" Visual="{DynamicResource appbar_navigate_next}" />
+                    <VisualBrush Stretch="Fill" Visual="{DynamicResource appbar_message_send}" />
 				</Rectangle.OpacityMask>
 			</Rectangle>
 		</Button>
