--- a/lilMess.Client/Views/SettingsView.xaml
+++ b/lilMess.Client/Views/SettingsView.xaml
@@ -26,9 +26,9 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <TextBlock TextAlignment="Center" FontSize="16" Grid.Row="1" Grid.Column="1" Margin="7,3,7,3" VerticalAlignment="Center" Text="{DynamicResource Localization}" />
-        <TextBlock TextAlignment="Center" FontSize="16" Grid.Row="2" Grid.Column="1" Margin="7,3,7,3" VerticalAlignment="Center" Text="{DynamicResource Theme}" />
-        <TextBlock TextAlignment="Center" FontSize="16" Grid.Row="3" Grid.Column="1" Margin="7,3,7,3" VerticalAlignment="Center" Text="{DynamicResource Accent}" />
+        <TextBlock TextAlignment="Center" FontSize="16" Grid.Row="1" Grid.Column="1" Margin="7,3,7,3" VerticalAlignment="Center" TextWrapping="Wrap" Text="{DynamicResource Localization}" />
+        <TextBlock TextAlignment="Center" FontSize="16" Grid.Row="2" Grid.Column="1" Margin="7,3,7,3" VerticalAlignment="Center" TextWrapping="Wrap" Text="{DynamicResource Theme}" />
+        <TextBlock TextAlignment="Center" FontSize="16" Grid.Row="3" Grid.Column="1" Margin="7,3,7,3" VerticalAlignment="Center" TextWrapping="Wrap" Text="{DynamicResource Accent}" />
 
         <ComboBox Grid.Row="1" Grid.Column="2"  Margin="5" DisplayMemberPath="Name" ItemsSource="{Binding ApplicationCommon.TranslationService.AvaiableCultures}" SelectedValue="{Binding Language}" />
         <ComboBox Grid.Row="2" Grid.Column="2"  Margin="5" DisplayMemberPath="Name" ItemsSource="{Binding ApplicationCommon.ThemeService.AvaiableAppThemes}" SelectedValue="{Binding Theme}" />
